Cleaned up EUTL DB

--- a/nbs/02-installation-allocations.ipynb
+++ b/nbs/02-installation-allocations.ipynb
@@ -747,7 +747,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "The next logical step is to repeat this for all countries and ETS phases, then combine the resulting dataframes"
+    "The next step is to repeat this for all countries and ETS phases, then combine the resulting dataframes"
    ]
   },
   {
@@ -1590,11 +1590,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br>\n",
+    "\n",
+    "A quick check reveals some issues with the dataset, for example there are several permit ids that have duplicate entries"
+   ]
   },
   {
    "cell_type": "code",
@@ -1854,11 +1856,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br>\n",
+    "\n",
+    "Lastly we'll save the dataframe as a csv"
+   ]
   },
   {
    "cell_type": "code",
