--- a/nbs/03-EUTL-database.ipynb
+++ b/nbs/03-EUTL-database.ipynb
@@ -86,11 +86,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br>\n",
+    "\n",
+    "For this single page we'll create a function that converts the relevant table into a dataframe"
+   ]
   },
   {
    "cell_type": "code",
@@ -251,11 +253,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br>\n",
+    "\n",
+    "We next need to identify how many pages we need to retrieve data from"
+   ]
   },
   {
    "cell_type": "code",
@@ -297,11 +301,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br>\n",
+    "\n",
+    "We're now ready to download and collate all of the separate pages"
+   ]
   },
   {
    "cell_type": "code",
@@ -313,7 +319,7 @@
     "def get_full_search_df(num_pages):\n",
     "    df_search = pd.DataFrame()\n",
     "\n",
-    "    for page_num in track(range(num_pages)):\n",
+    "    for page_num in track(range(num_pages), label='Accounts'):\n",
     "        r = get_accounts_raw_search(page_num=page_num)\n",
     "        df_search_page = extract_search_df(r)\n",
     "        df_search = df_search.append(df_search_page)\n",
@@ -493,11 +499,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br>\n",
+    "\n",
+    "We'll quickly inspect the number of each type of account"
+   ]
   },
   {
    "cell_type": "code",
@@ -1289,17 +1297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#exports\n",
-    "def construct_ets_unit_dfs(account_ids, owners_col_rename_map, units_col_rename_map):\n",
+    "def construct_ets_unit_dfs(account_ids, owners_col_rename_map, units_col_rename_map, label=None):\n",
     "    df_owners = pd.DataFrame(index=account_ids, columns=owners_col_rename_map.keys())\n",
     "    df_units = pd.DataFrame(index=account_ids, columns=units_col_rename_map.keys())\n",
     "    ts_dfs = {}\n",
     "\n",
-    "    for account_id in track(account_ids):\n",
+    "    for account_id in track(account_ids, label=label):\n",
     "        page_info, df_ts = extract_page_info(account_id)\n",
     "\n",
     "        df_owners.loc[account_id] = pd.Series(collate_owner_info(page_info))\n",
@@ -1381,7 +1389,7 @@
     "        'Main Activity': 'main_activity'\n",
     "    }\n",
     "    \n",
-    "    df_owners, df_installations, ts_dfs = construct_ets_unit_dfs(account_ids, installation_owners_col_rename_map, installations_col_rename_map)\n",
+    "    df_owners, df_installations, ts_dfs = construct_ets_unit_dfs(account_ids, installation_owners_col_rename_map, installations_col_rename_map, label='Installations')\n",
     "    installation_dfs = ts_dfs_to_separate_vars(ts_dfs)\n",
     "    \n",
     "    installation_dfs.update({\n",
@@ -1394,6 +1402,9 @@
     "def get_installation_dfs(df_search, data_dir='data/installations', redownload=False):\n",
     "    df_search_installations = df_search.query(\"account_type=='Operator Holding Account'\")\n",
     "    account_ids = df_search_installations['account_id']\n",
+    "    \n",
+    "    if not os.path.exists(data_dir):\n",
+    "        os.makedirs(data_dir)\n",
     "\n",
     "    if redownload == True:\n",
     "        installation_dfs = construct_installation_dfs(account_ids)\n",
@@ -1413,22 +1424,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div><span class=\"Text-label\" style=\"display:inline-block; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; min-width:0; max-width:15ex; vertical-align:middle; text-align:right\"></span>\n",
+       "<progress style=\"width:60ex\" max=\"16040\" value=\"2292\" class=\"Progress-main\"/></progress>\n",
+       "<span class=\"Progress-label\"><strong>14%</strong></span>\n",
+       "<span class=\"Iteration-label\">2240/16040</span>\n",
+       "<span class=\"Time-label\">[20:58<00:00, 0.55s/it]</span></div>"
+      ],
       "text/plain": [
-       "(16040, 18)"
+       "\u001b[A\u001b[2K\r",
+       " [████████####################################################] 2292/16040 [20:58<00:00, 0.55s/it]"
       ]
      },
-     "execution_count": 588,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "redownload_installations = True\n",
+    "redownload_installations = False\n",
     "\n",
     "installation_dfs = get_installation_dfs(df_search, data_dir='../data/installations', redownload=redownload_installations)\n",
     "\n",
@@ -1446,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1511,7 @@
     "        'Main Activity': 'main_activity'\n",
     "    }\n",
     "    \n",
-    "    df_owners, df_aircraft, ts_dfs = construct_ets_unit_dfs(account_ids, aircraft_owners_col_rename_map, aircraft_col_rename_map)\n",
+    "    df_owners, df_aircraft, ts_dfs = construct_ets_unit_dfs(account_ids, aircraft_owners_col_rename_map, aircraft_col_rename_map, label='Aircraft')\n",
     "    aircraft_dfs = ts_dfs_to_separate_vars(ts_dfs)\n",
     "    \n",
     "    aircraft_dfs.update({\n",
@@ -1506,6 +1524,9 @@
     "def get_aircraft_dfs(df_search, data_dir='data/aircraft', redownload=False):\n",
     "    df_search_aircraft = df_search.query(\"account_type=='Aircraft Operator Account'\")\n",
     "    account_ids = df_search_aircraft['account_id']\n",
+    "    \n",
+    "    if not os.path.exists(data_dir):\n",
+    "        os.makedirs(data_dir)\n",
     "\n",
     "    redownload_aircraft = True\n",
     "\n",
@@ -1529,25 +1550,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><span class=\"Text-label\" style=\"display:inline-block; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; min-width:0; max-width:15ex; vertical-align:middle; text-align:right\"></span>\n",
-       "<progress style=\"width:60ex\" max=\"1580\" value=\"1569\" class=\"Progress-main\"/></progress>\n",
-       "<span class=\"Progress-label\"><strong>99%</strong></span>\n",
-       "<span class=\"Iteration-label\">1560/1580</span>\n",
-       "<span class=\"Time-label\">[14:02<00:01, 0.54s/it]</span></div>"
-      ],
-      "text/plain": [
-       "\u001b[A\u001b[2K\r",
-       " [███████████████████████████████████████████████████████████#] 1569/1580 [14:02<00:01, 0.54s/it]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "redownload_aircraft = False\n",
     "\n",
@@ -1564,39 +1567,39 @@
     "\n",
     "### Putting It All Together\n",
     "\n",
-    "Finally we'll finish by creating a wrapper that downloads all of the data to the specified data directory"
+    "Finally we'll finish by creating a wrapper that downloads all of the data to the specified directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 599,
    "metadata": {},
    "outputs": [],
    "source": [
     "#exports\n",
     "def redownload_all_data(data_dir='data'):\n",
-    "    set_dfs = dict()\n",
-    "    set_dfs['account_search'] = get_search_df(data_dir=data_dir, redownload=True)\n",
+    "    all_dfs = dict()\n",
+    "    all_dfs['account_search'] = get_search_df(data_dir=data_dir, redownload=True)\n",
     "    \n",
     "    installation_dfs = get_installation_dfs(df_search, data_dir=f'{data_dir}/installations', redownload=True)\n",
     "    aircraft_dfs = get_aircraft_dfs(df_search, data_dir=f'{data_dir}/aircraft', redownload=True)\n",
     "    \n",
-    "    set_dfs.update(installation_dfs)\n",
-    "    set_dfs.update(aircraft_dfs)\n",
+    "    all_dfs.update(installation_dfs)\n",
+    "    all_dfs.update(aircraft_dfs)\n",
     "    \n",
-    "    return set_dfs"
+    "    return all_dfs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 606,
    "metadata": {},
    "outputs": [],
    "source": [
     "redownload_everything = False\n",
     "\n",
     "if redownload_everything == True:\n",
-    "    set_dfs = redownload_all_data(data_dir='../data')"
+    "    all_dfs = redownload_all_data(data_dir='../data')"
    ]
   },
   {
@@ -1613,7 +1616,8 @@
    "outputs": [],
    "source": [
     "# could make sense to use something like RDF for storing the installation and owner data\n",
-    "# then the time-series data can be stored as separate csvs"
+    "# then the time-series data can be stored as separate csvs\n",
+    "# remove data retrieval on push for the moment"
    ]
   }
  ],
