full emissions data

--- a/nbs/03-EUTL-database.ipynb
+++ b/nbs/03-EUTL-database.ipynb
@@ -584,20 +584,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 608,
    "metadata": {},
    "outputs": [],
    "source": [
     "#exports\n",
-    "def retry_request(root_url, params={}, n_retries=5, **kwargs):\n",
+    "def retry_request(root_url, params={}, n_retries=10, **kwargs):\n",
     "    for i in range(n_retries):\n",
     "        try:\n",
     "            r = requests.get(root_url, params=params, **kwargs)\n",
     "            return r\n",
     "        except Exception as e:\n",
+    "            err = e\n",
     "            continue\n",
     "\n",
-    "    raise e\n",
+    "    raise err\n",
     "    \n",
     "def extract_key_table_soups(account_url):\n",
     "    r = retry_request(account_url)\n",
@@ -1424,25 +1425,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 609,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><span class=\"Text-label\" style=\"display:inline-block; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; min-width:0; max-width:15ex; vertical-align:middle; text-align:right\"></span>\n",
-       "<progress style=\"width:60ex\" max=\"16040\" value=\"2292\" class=\"Progress-main\"/></progress>\n",
-       "<span class=\"Progress-label\"><strong>14%</strong></span>\n",
-       "<span class=\"Iteration-label\">2240/16040</span>\n",
-       "<span class=\"Time-label\">[20:58<00:00, 0.55s/it]</span></div>"
+       "<progress style=\"width:60ex\" max=\"16040\" value=\"16040\" class=\"Progress-main\"/></progress>\n",
+       "<span class=\"Progress-label\"><strong>100%</strong></span>\n",
+       "<span class=\"Iteration-label\">16000/16040</span>\n",
+       "<span class=\"Time-label\">[02:20:00<00:00, 0.52s/it]</span></div>"
       ],
       "text/plain": [
        "\u001b[A\u001b[2K\r",
-       " [████████####################################################] 2292/16040 [20:58<00:00, 0.55s/it]"
+       " [████████████████████████████████████████████████████████████] 16040/16040 [02:20:00<00:00, 0.52s/it]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(16040, 17)"
+      ]
+     },
+     "execution_count": 609,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1548,9 +1559,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 610,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><span class=\"Text-label\" style=\"display:inline-block; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; min-width:0; max-width:15ex; vertical-align:middle; text-align:right\"></span>\n",
+       "<progress style=\"width:60ex\" max=\"1580\" value=\"1580\" class=\"Progress-main\"/></progress>\n",
+       "<span class=\"Progress-label\"><strong>100%</strong></span>\n",
+       "<span class=\"Iteration-label\">1575/1580</span>\n",
+       "<span class=\"Time-label\">[14:53<00:01, 0.57s/it]</span></div>"
+      ],
+      "text/plain": [
+       "\u001b[A\u001b[2K\r",
+       " [████████████████████████████████████████████████████████████] 1580/1580 [14:53<00:01, 0.57s/it]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1580, 17)"
+      ]
+     },
+     "execution_count": 610,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "redownload_aircraft = False\n",
     "\n",
@@ -1581,8 +1620,8 @@
     "    all_dfs = dict()\n",
     "    all_dfs['account_search'] = get_search_df(data_dir=data_dir, redownload=True)\n",
     "    \n",
-    "    installation_dfs = get_installation_dfs(df_search, data_dir=f'{data_dir}/installations', redownload=True)\n",
-    "    aircraft_dfs = get_aircraft_dfs(df_search, data_dir=f'{data_dir}/aircraft', redownload=True)\n",
+    "    installation_dfs = get_installation_dfs(all_dfs['account_search'], data_dir=f'{data_dir}/installations', redownload=True)\n",
+    "    aircraft_dfs = get_aircraft_dfs(all_dfs['account_search'], data_dir=f'{data_dir}/aircraft', redownload=True)\n",
     "    \n",
     "    all_dfs.update(installation_dfs)\n",
     "    all_dfs.update(aircraft_dfs)\n",
